@@ -62,7 +62,7 @@ type Miner struct {
 	worker *worker
 }
 
-func New(eth Backend, config *Config, chainConfig *params.ChainConfig, mux *event.TypeMux, engine consensus.Engine, isLocalBlock func(block *types.Block) bool) *Miner {
+func New(eth Backend, config *Config, chainConfig *params.ChainConfig, mux *event.TypeMux, engine consensus.Engine, isLocalBlock func(block *types.Block) bool, mcb *MinerCallbacks) *Miner {
 	miner := &Miner{
 		// eth:     eth,
 		// mux:     mux,
@@ -70,7 +70,7 @@ func New(eth Backend, config *Config, chainConfig *params.ChainConfig, mux *even
 		// exitCh:  make(chan struct{}),
 		// startCh: make(chan common.Address),
 		// stopCh:  make(chan struct{}),
-		worker: newWorker(config, chainConfig, engine, eth, mux, isLocalBlock, true),
+		worker: newWorker(config, chainConfig, engine, eth, mux, isLocalBlock, true, mcb),
 	}
 	// go miner.update()
 
